# kuriftu-ai

./: .env  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
backend/: Dockerfile  docker-entrypoint.sh  enhanced_api.py  enhanced_env.py  package-lock.json  package.json  requirements.txt  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  index.ts
backend/src/lib/: auth.ts  booking-includes.ts  cors-options.ts  dates.ts  http.ts  notifications.ts  pricing-engine.ts
backend/src/middleware/: auth.ts
backend/src/routes/: admin.ts  auth.ts  bookings.ts  livekit.ts  notifications.ts  pricing-admin.ts  profile.ts  public-catalog.ts  resorts.ts  rooms.ts  seed.ts  serviceRequests.ts
livekit-agent/: .dockerignore  .gitignore  Dockerfile  README.md  livekit.toml  pyproject.toml
livekit-agent/src/kuriftu_agent/: __init__.py  agent.py  booking_api.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/bookings/: page.tsx
src/app/intellirate/: page.tsx
src/app/login/: page.tsx
src/app/notifications/: page.tsx
src/app/pricing/: page.tsx
src/app/register/: page.tsx
src/app/requests/: page.tsx  (+1 more)
src/components/: VoiceConcierge.tsx  VoiceSessionDebug.tsx  app-shell.tsx  icons.tsx  require-auth.tsx  ui.tsx  voice-agent-sound-stage.tsx  voice-home-promo.tsx
src/contexts/: auth-context.tsx
src/lib/: api.ts  guest-format.ts  livekit-url.ts  pricing-api.ts  resortImages.ts  staff.ts  types.ts
src/types/: livekit-components-react.d.ts
(+34 files in other folders)
