[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuriftu-livekit-agent"
version = "0.1.0"
description = "LiveKit voice agent for Kuriftu hotel booking API"
requires-python = ">=3.11,<3.15"
dependencies = [
    "livekit-agents[silero,turn-detector]>=1.4,<2",
    "livekit-plugins-noise-cancellation>=0.2,<1",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
